Home Fragment Deals Concat Adapter Added.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.google.android.material:material:<version>'
 
     // Retrofit & Gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -80,5 +81,8 @@ dependencies {
 
     //Card view
     implementation("androidx.cardview:cardview:1.0.0")
+
+    // Viewpager 2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
 }
