--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.13.2"
 
     // Dagger Hilt
-    implementation 'com.google.dagger:hilt-android:2.42'
-    kapt 'com.google.dagger:hilt-compiler:2.42'
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
     implementation "androidx.fragment:fragment-ktx:1.5.3"
 
     // Lottie
@@ -84,5 +84,7 @@ dependencies {
 
     // Viewpager 2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    //Refresh
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 }
