--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,41 +50,37 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
+    //noinspection GradleDependency
     implementation 'com.android.car.ui:car-ui-lib:2.0.0'
+    implementation 'androidx.core:core:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.material:material:<version>'
-
     // Retrofit & Gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
     // Glide
     implementation "com.github.bumptech.glide:glide:4.13.2"
-
     // Dagger Hilt
     implementation 'com.google.dagger:hilt-android:2.44'
     kapt 'com.google.dagger:hilt-compiler:2.44'
     implementation "androidx.fragment:fragment-ktx:1.5.3"
-
     // Lottie
     implementation "com.airbnb.android:lottie:3.4.0"
-
     //Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
-
     //Room
     implementation("androidx.room:room-ktx:2.4.3")
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
-
     //Card view
     implementation("androidx.cardview:cardview:1.0.0")
-
     // Viewpager 2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     //Refresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    //splash Android 12
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 
 }
